Main Budget Page + fixes (#97)
* UI of main budget page setup

* added styling changes to budget page. Added back to budget page button

* added styling to the back to budget button. Deleted the My Budget option from navigation

* clicking on the budget card if not in the middle of carousel will now bring it towards middle

* carousel buttons are not overlapping cards anymore. Better spacing to carousel cards. Highlighting is disabled now

* cleaned up comments

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 .App {
   width: 100%;
+  padding-bottom: 1em;
   overflow: hidden;
 }
 
